[tool.poetry]
name = "LSB"
version = "0.1.0"
description = ""
authors = ["Michael Scoones <m.g.scoones@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
cvxpy = "^1.5.2"
hypothesis = "^6.108.0"
plotly = "^5.22.0"

[tool.poetry.dev-dependencies]
pytest = ">=8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
